--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-  "name": "underleaf",
+  "name": "LatexEditor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
     "@material-ui/core": "^4.9.11",
     "@material-ui/lab": "^4.0.0-alpha.50",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@prisma/client": "^5.15.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "ace-builds": "^1.4.12",
+    "axios": "^1.7.2",
     "babel-plugin-prismjs": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^2.10.0",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "mui": "^0.0.1",
     "node-gyp": "^10.1.0",
     "node-latex": "^3.0.0",
     "node-sass": "^9.0.0",
+    "nodemon": "^3.1.3",
+    "prisma": "^5.15.0",
     "react": "^17.0.2",
     "react-ace": "^9.4.0",
     "react-copy-to-clipboard": "^5.0.3",
@@ -31,7 +44,7 @@
     "react-scripts": "4.0.3",
     "react-split": "^2.0.7",
     "react-use-clipboard": "1.0.7",
-    "styled-components": "^5.2.3",
+    "styled-components": "^6.1.11",
     "temp": "^0.9.4",
     "web-vitals": "^1.0.1"
   },
@@ -39,7 +52,13 @@
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "db:seed": "prisma db seed",
+    "db:push": "prisma db push",
+    "dev": "nodemon server/server.js"
+  },
+  "prisma": {
+    "seed": "node --loader ts-node/prisma/seed.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +80,7 @@
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "prettier": "^3.3.2"
   }
 }
