--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
-    "@material-ui/core": "^4.9.11",
-    "@material-ui/lab": "^4.0.0-alpha.50",
-    "@mui/icons-material": "^5.15.19",
-    "@mui/material": "^5.15.19",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@prisma/client": "^5.15.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -25,6 +23,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs": "0.0.1-security",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mui": "^0.0.1",
     "node-gyp": "^10.1.0",
@@ -49,13 +48,13 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "client": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "db:seed": "prisma db seed",
     "db:push": "prisma db push",
-    "dev": "nodemon server/server.js"
+    "server": "nodemon server/server.js"
   },
   "prisma": {
     "seed": "node --loader ts-node/prisma/seed.ts"
