--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs": "0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mui": "^0.0.1",
     "node-gyp": "^10.1.0",
     "node-latex": "^3.0.0",
